IGW.tf
# resource "aws_internet_gateway" "igw_vpc" {
#   vpc_id = aws_vpc.custom_vpc.id
#   tags = {
#     Name = "Project-Fusion-Internet Gateway"
#   }
# }
